furious typing made my commit late, got stuck in gitub, still need to fix modal

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -195,4 +195,72 @@
   .navbar .info {
       color: whitesmoke;
   }
+
+  .reset-button {
+    background-color: #b62a2a; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 15px;
+    box-shadow: 0 9px #333;
+    font-family: 'Nosifer';
+    font-size: 15px;
+  }
+
+  .reset-button:active {
+    background-color: #831111;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+/* 
+.modal-button {
+    font-size: 16px; 
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  } */
   
